workshops/04_ingress/04_rate_limit.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: my-ingress-middleware
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /nginx
      - /apache
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-ratelimit
spec:
  rateLimit:
    average: 100
    burst: 500
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-my-ingress-middleware@kubernetescrd ,default-test-ratelimit@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /apache
            pathType: Prefix
            backend:
              service:
                name: apache-service
                port:
                  number: 8081
